crates/jarl-cli/tests/integration/snapshots/integration__min_r_version__min_r_version_from_cli_only-2.snap
---
source: crates/jarl-cli/tests/integration/min_r_version.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").arg(\"--min-r-version\").arg(\"4.4.0\").run().normalize_os_executable_name()"
---
success: true
exit_code: 0
----- stdout -----
All checks passed!

----- stderr -----

----- args -----
check . --min-r-version 4.4.0
